fix gateway main.js can not find

--- a/apps/gateway/dockerfile
+++ b/apps/gateway/dockerfile
@@ -6,5 +6,5 @@ RUN npm install -g pnpm && \
     pnpm install && \
     pnpm build gateway
 ENV USER_URL=""
-CMD ["node", "./dist/app/gateway/main.js"]
+CMD ["node", "./dist/apps/gateway/main.js"]
 EXPOSE 4000
